# aidocs

./: .gitignore  CHANGELOG.md  COORDINATION_INSTRUCTIONS.md  INSTALL.md  MANIFEST.in  NEW_AGENT_INSTRUCTIONS.md  README.md  pyproject.toml  tasks.md  test_cli_manual.py
claude_code_integration/: hooks_template.yaml  skill.md
examples/test_project/: CLI_TEST_REPORT.md  README.md  debug_search.py  detailed_cli_test.py  package.json  test_aidocs_workflow.py  test_cli.sh
examples/test_project/.aidocs/: store.db
examples/test_project/src/: api.py  app.js  auth.py
examples/test_project/src/auth/: middleware.js  routes.js
scripts/: build.sh
src/aidocs/: __init__.py  cli.py  completion.py  database.py  models.py  utils.py
tests/: __init__.py  test_cli.py  test_database.py  test_models.py
